Pass context through to response, added simple example

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ src/httpclient/httpnet.o
 src/httpclient/httprequest.o
 src/httpclient/httpresponse.o
 src/stamp-h1
+simple
+src/httpclient/httputil.o
+src/simple.o
 
 .codelite/
 chttpclient.project
