--- a/Makefile.am
+++ b/Makefile.am
@@ -2,6 +2,7 @@ library_sources = \
 	src/httpclient/httperr.c \
 	src/httpclient/httpclient.h \
 	src/httpclient/net/httpnet.c src/httpclient/net/httpnet.h \
+	src/httpclient/net/httpbodystreams.c src/httpclient/net/httpbodystreams.h \
 	src/httpclient/httpcontext.c src/httpclient/httpcontext.h \
 	src/httpclient/httprequest.c src/httpclient/httprequest.h \
 	src/httpclient/httpresponse.c src/httpclient/httpresponse.h \
