--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,14 @@ config.log
 config.status
 configure
 download
+tester
 src/.deps/
 src/.dirstamp
 src/cmdline.o
 src/config.h
 src/config.h.in
 src/download.o
+src/tester.o
 src/httpclient/.deps/
 src/httpclient/.dirstamp
 src/httpclient/httpcontext.o
